// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@components/_base-grid renders its content 1`] = `
<div class="tableContainer">
  <table class="table">
    <thead>
      <tr>
        <!---->
        <th class="">
          Last Name
          <basefasicon-stub source="font-awesome" name="angle-up" class="sortIcon"></basefasicon-stub>
        </th>
        <th class="">
          First Name
          <basefasicon-stub source="font-awesome" name="angle-up" class="sortIcon"></basefasicon-stub>
        </th>
        <th class="">
          ID
          <basefasicon-stub source="font-awesome" name="angle-up" class="sortIcon"></basefasicon-stub>
        </th>
      </tr>
    </thead>
    <tbody></tbody>
  </table>
  <div class="bottomSpace">
    <div class="total">
      Total:
      <strong>26</strong></div>
    <ul name="Pagination" class="pagination">
      <li class="pageItem"><a href="#" class="pageLink">
          <basefasicon-stub source="font-awesome" name="angle-left"></basefasicon-stub>
        </a></li>
      <li class="pageItem"><a href="#" class="pageLink">1</a></li>
      <li class="pageItem currentPage"><a href="#" class="pageLink">2</a></li>
      <li class="pageItem"><a href="#" class="pageLink">3</a></li>
      <li class="pageItem"><a href="#" class="pageLink">4</a></li>
      <li class="pageItem"><a href="#" class="pageLink">5</a></li>
      <li class="pageItem"><a href="#" class="pageLink">6</a></li>
      <li class="pageItem"><a href="#" class="pageLink">7</a></li>
      <li class="pageItem"><a class="pageLink">...</a></li>
      <li class="pageItem"><a href="#" class="pageLink">13</a></li>
      <li class="pageItem"><a href="#" class="pageLink">
          <basefasicon-stub source="font-awesome" name="angle-right"></basefasicon-stub>
        </a></li>
    </ul>
    <div class="perPageContainer">
      <div class="perPageHeader">Per Page: </div>
      <baseselect-stub value="[object Object]" size="small"></baseselect-stub>
    </div>
  </div>
</div>
`;

exports[`@components/_base-grid renders its content by click header 1`] = `
<div class="tableContainer">
  <table class="table">
    <thead>
      <tr>
        <!---->
        <th class="active">
          Last Name
          <basefasicon-stub source="font-awesome" name="angle-down" class="sortIcon"></basefasicon-stub>
        </th>
        <th class="">
          First Name
          <basefasicon-stub source="font-awesome" name="angle-up" class="sortIcon"></basefasicon-stub>
        </th>
        <th class="">
          ID
          <basefasicon-stub source="font-awesome" name="angle-up" class="sortIcon"></basefasicon-stub>
        </th>
      </tr>
    </thead>
    <tbody></tbody>
  </table>
  <div class="bottomSpace">
    <div class="total">
      Total:
      <strong>26</strong></div>
    <ul name="Pagination" class="pagination">
      <!---->
      <li class="pageItem currentPage"><a href="#" class="pageLink">1</a></li>
      <li class="pageItem"><a href="#" class="pageLink">2</a></li>
      <li class="pageItem"><a href="#" class="pageLink">3</a></li>
      <li class="pageItem"><a href="#" class="pageLink">4</a></li>
      <li class="pageItem"><a href="#" class="pageLink">5</a></li>
      <li class="pageItem"><a href="#" class="pageLink">6</a></li>
      <li class="pageItem"><a href="#" class="pageLink">7</a></li>
      <li class="pageItem"><a class="pageLink">...</a></li>
      <li class="pageItem"><a href="#" class="pageLink">13</a></li>
      <li class="pageItem"><a href="#" class="pageLink">
          <basefasicon-stub source="font-awesome" name="angle-right"></basefasicon-stub>
        </a></li>
    </ul>
    <div class="perPageContainer">
      <div class="perPageHeader">Per Page: </div>
      <baseselect-stub value="[object Object]" size="small"></baseselect-stub>
    </div>
  </div>
</div>
`;

exports[`@components/_base-grid renders its content when filter by DD 1`] = `
<div class="tableContainer">
  <table class="table">
    <thead>
      <tr>
        <!---->
        <th class="">
          Last Name
          <basefasicon-stub source="font-awesome" name="angle-up" class="sortIcon"></basefasicon-stub>
        </th>
        <th class="">
          First Name
          <basefasicon-stub source="font-awesome" name="angle-up" class="sortIcon"></basefasicon-stub>
        </th>
        <th class="">
          ID
          <basefasicon-stub source="font-awesome" name="angle-up" class="sortIcon"></basefasicon-stub>
        </th>
      </tr>
    </thead>
    <tbody></tbody>
  </table>
  <div class="bottomSpace">
    <div class="total">
      Total:
      <strong>1</strong></div>
    <ul name="Pagination" class="pagination">
      <!---->
      <li class="pageItem currentPage"><a href="#" class="pageLink">1</a></li>
      <!---->
    </ul>
    <div class="perPageContainer">
      <div class="perPageHeader">Per Page: </div>
      <baseselect-stub value="[object Object]" size="small"></baseselect-stub>
    </div>
  </div>
</div>
`;

exports[`@components/_base-grid renders its content when order by DESC sort by ID 1`] = `
<div class="tableContainer">
  <table class="table">
    <thead>
      <tr>
        <!---->
        <th class="">
          Last Name
          <basefasicon-stub source="font-awesome" name="angle-up" class="sortIcon"></basefasicon-stub>
        </th>
        <th class="">
          First Name
          <basefasicon-stub source="font-awesome" name="angle-up" class="sortIcon"></basefasicon-stub>
        </th>
        <th class="active">
          ID
          <basefasicon-stub source="font-awesome" name="angle-down" class="sortIcon"></basefasicon-stub>
        </th>
      </tr>
    </thead>
    <tbody></tbody>
  </table>
  <div class="bottomSpace">
    <div class="total">
      Total:
      <strong>26</strong></div>
    <ul name="Pagination" class="pagination">
      <!---->
      <li class="pageItem currentPage"><a href="#" class="pageLink">1</a></li>
      <li class="pageItem"><a href="#" class="pageLink">2</a></li>
      <li class="pageItem"><a href="#" class="pageLink">3</a></li>
      <li class="pageItem"><a href="#" class="pageLink">4</a></li>
      <li class="pageItem"><a href="#" class="pageLink">5</a></li>
      <li class="pageItem"><a href="#" class="pageLink">6</a></li>
      <li class="pageItem"><a href="#" class="pageLink">7</a></li>
      <li class="pageItem"><a class="pageLink">...</a></li>
      <li class="pageItem"><a href="#" class="pageLink">13</a></li>
      <li class="pageItem"><a href="#" class="pageLink">
          <basefasicon-stub source="font-awesome" name="angle-right"></basefasicon-stub>
        </a></li>
    </ul>
    <div class="perPageContainer">
      <div class="perPageHeader">Per Page: </div>
      <baseselect-stub value="[object Object]" size="small"></baseselect-stub>
    </div>
  </div>
</div>
`;
